--- a/index.html
+++ b/index.html
@@ -89,11 +89,15 @@
       <h1 class="card-title">Pesquisa de Termos em PDF</h1>
       <div>
         <label for="terms">Digite os termos de pesquisa (um por linha):</label>
-        <textarea
-          id="terms"
-          rows="5"
-          placeholder="Digite os termos aqui..."
-        ></textarea>
+        <textarea id="terms" rows="5" placeholder="Digite os termos aqui...">
+PR58101-A
+DYLLIARDI ALESSI
+PR55617
+PRISCILLA CONTI BARTOLOMEU
+PR97632-A
+JEANCARLO DE OLIVEIRA COLETTI
+LUIZ EDUARDO PECCININ</textarea
+        >
       </div>
       <div id="file-drop" class="file-drop">
         <p>Clique ou arraste e solte seu PDF aqui</p>
@@ -118,223 +122,7 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc =
           "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf.worker.mjs";
       });
-
-      const terms = document.getElementById("terms");
-      const fileDrop = document.getElementById("file-drop");
-      const fileInput = document.getElementById("file-input");
-      const error = document.getElementById("error");
-      const loading = document.getElementById("loading");
-      const results = document.getElementById("results");
-
-      let pages = [];
-      let debounceTimer;
-      let currentSearchController = null;
-
-      fileDrop.addEventListener("click", () => fileInput.click());
-      fileDrop.addEventListener("dragover", preventDefault);
-      fileDrop.addEventListener("drop", handleFileDrop);
-      fileInput.addEventListener("change", handleFileSelect);
-      terms.addEventListener("input", debounceHandleTermsChange);
-
-      function preventDefault(e) {
-        e.preventDefault();
-      }
-
-      function handleFileDrop(e) {
-        preventDefault(e);
-        const file = e.dataTransfer.files[0];
-        processFile(file);
-      }
-
-      function handleFileSelect(e) {
-        const file = e.target.files[0];
-        processFile(file);
-      }
-
-      const searchButton = document.getElementById("search-button");
-      searchButton.addEventListener("click", handleTermsChange);
-
-      function debounceHandleTermsChange() {
-        clearTimeout(debounceTimer);
-        debounceTimer = setTimeout(handleTermsChange, 300);
-      }
-
-      function handleTermsChange() {
-        if (pages.length > 0) {
-          const searchTerms = terms.value
-            .split("\n")
-            .filter((term) => term.trim() !== "");
-
-          // Cancel the previous search if it's still ongoing
-          if (currentSearchController) {
-            currentSearchController.abort();
-          }
-
-          // Create a new AbortController for this search
-          currentSearchController = new AbortController();
-
-          searchInTextAsync(pages, searchTerms, currentSearchController.signal);
-        }
-      }
-
-      async function processFile(file) {
-        if (file && file.type === "application/pdf") {
-          error.textContent = "";
-          loading.style.display = "block";
-          fileDrop.textContent = file.name;
-          try {
-            const arrayBuffer = await file.arrayBuffer();
-            const pdf = await pdfjsLib.getDocument({ data: arrayBuffer })
-              .promise;
-            pages = [];
-
-            for (let i = 1; i <= pdf.numPages; i++) {
-              const page = await pdf.getPage(i);
-              const textContent = await page.getTextContent();
-              let pageText = textContent.items
-                .map((item) => item.str)
-                .join(" ");
-
-              // remove double spaces and new lines
-              pageText = pageText.replace(/\s\s+/g, " ").replace(/\n/g, " ");
-
-              pages.push({ number: i, text: pageText });
-
-              // Update progress
-              updateSearchProgress(Math.round((i / pdf.numPages) * 100));
-            }
-
-            const searchTerms = terms.value
-              .split("\n")
-              .filter((term) => term.trim() !== "");
-
-            // Create a new AbortController for this search
-            currentSearchController = new AbortController();
-
-            searchInTextAsync(
-              pages,
-              searchTerms,
-              currentSearchController.signal
-            );
-          } catch (err) {
-            error.textContent = "Erro ao processar o PDF: " + err.message;
-            console.error("PDF processing error:", err);
-          } finally {
-            loading.style.display = "none";
-          }
-        } else {
-          error.textContent = "Por favor, selecione um arquivo PDF válido.";
-        }
-      }
-
-      async function searchInTextAsync(pages, searchTerms, signal) {
-        results.innerHTML = "<h2>Resultados da Pesquisa:</h2>";
-        const searchResults = [];
-        let searchProgress = 0;
-        const totalSearches = pages.length * searchTerms.length;
-
-        try {
-          for (const term of searchTerms) {
-            if (signal.aborted) {
-              throw new DOMException("Search aborted", "AbortError");
-            }
-
-            let termResult = {
-              term,
-              found: false,
-              occurrences: 0,
-              contexts: [],
-            };
-
-            const resultDiv = document.createElement("div");
-            resultDiv.className = "result";
-            resultDiv.innerHTML = `<p><strong>${term}</strong>: Pesquisando...</p>`;
-            results.appendChild(resultDiv);
-
-            for (let i = 0; i < pages.length; i++) {
-              if (signal.aborted) {
-                throw new DOMException("Search aborted", "AbortError");
-              }
-
-              const page = pages[i];
-              const previousPage = i > 0 ? pages[i - 1] : null;
-              const nextPage = i < pages.length - 1 ? pages[i + 1] : null;
-              const regex = new RegExp(`(.{0,400}${term}.{0,400})`, "gi");
-              let match;
-
-              const searchText =
-                previousPage && nextPage
-                  ? previousPage.text.slice(-100) +
-                    page.text +
-                    nextPage.text.slice(0, 100)
-                  : previousPage
-                  ? previousPage.text.slice(-100) + page.text
-                  : nextPage
-                  ? page.text + nextPage.text.slice(0, 100)
-                  : page.text;
-
-              while ((match = regex.exec(searchText)) !== null) {
-                const context = match[1].replace(
-                  new RegExp(`(${term})`, "gi"),
-                  "<strong>$1</strong>"
-                );
-                termResult.contexts.push({
-                  page: page.number,
-                  context: context,
-                });
-                termResult.occurrences += (
-                  match[1].match(new RegExp(term, "gi")) || []
-                ).length;
-                termResult.found = true;
-
-                // Update result in real-time
-                resultDiv.innerHTML = `
-                  <p><strong>${term}</strong>: Encontrado (${
-                  termResult.occurrences
-                } ocorrências)</p>
-                  ${termResult.contexts
-                    .map(
-                      (context) =>
-                        `<p class="context">Página <strong>${context.page}</strong>: ${context.context}</p>`
-                    )
-                    .join("")}
-                `;
-              }
-
-              // Update search progress
-              searchProgress++;
-              const progressPercentage = Math.round(
-                (searchProgress / totalSearches) * 100
-              );
-              updateSearchProgress(progressPercentage);
-
-              // Allow UI to update
-              await new Promise((resolve) => setTimeout(resolve, 0));
-            }
-
-            if (!termResult.found) {
-              resultDiv.innerHTML = `<p><strong>${term}</strong>: Não encontrado</p>`;
-            }
-
-            searchResults.push(termResult);
-          }
-        } catch (error) {
-          if (error.name === "AbortError") {
-            console.log("Search was aborted");
-          } else {
-            throw error;
-          }
-        }
-      }
-
-      function updateSearchProgress(percentage) {
-        const progressBarFill = document.getElementById("progress-bar-fill");
-        progressBarFill.style.width = `${percentage}%`;
-        progressBarFill.textContent = `${percentage}%`;
-        if (percentage === 100) {
-          progressBarFill.textContent = "Pesquisa concluída!";
-        }
-      }
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
