--- a/index.html
+++ b/index.html
@@ -89,15 +89,11 @@
       <h1 class="card-title">Pesquisa de Termos em PDF</h1>
       <div>
         <label for="terms">Digite os termos de pesquisa (um por linha):</label>
-        <textarea id="terms" rows="5" placeholder="Digite os termos aqui...">
-PR58101-A
-DYLLIARDI ALESSI
-PR55617
-PRISCILLA CONTI BARTOLOMEU
-PR97632-A
-JEANCARLO DE OLIVEIRA COLETTI
-LUIZ EDUARDO PECCININ</textarea
-        >
+        <textarea
+          id="terms"
+          rows="5"
+          placeholder="Digite os termos aqui..."
+        ></textarea>
       </div>
       <div id="file-drop" class="file-drop">
         <p>Clique ou arraste e solte seu PDF aqui</p>
